--- a/source/stylesheets/lib/_stations.css.sass
+++ b/source/stylesheets/lib/_stations.css.sass
@@ -3,9 +3,41 @@
 		display: inline-block
 		vertical-align: top
 		width: 240px
+
+		.select-block
+			background-color: #f7f8f8
+			padding: 20px
+
+		.more
+			margin: 10px 0 20px
+
+
 	.right-column
 		display: inline-block
 		margin-left: 36px
 		vertical-align: top
 		width: 800px
+
+		.map
+			height: 368px
+			width: 802px
+			margin-bottom: 15px
+
+		.gallery
+			.h1
+				img
+					vertical-align: bottom
+			.left
+				display: inline-block
+				vertical-align: top
+				width: 308px
+				height: 220px
+				margin-top: 10px
+			.right
+				display: inline-block
+				margin-left: 25px
+				vertical-align: top
+				width: 460px
+
+
 
