--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -5,6 +5,7 @@
 @import "lib/main_gallery"
 @import 'lib/date'
 @import 'lib/button'
+@import 'lib/custom-select'
 @import 'lib/blog'
 @import 'lib/stations'
 @import 'container'
@@ -30,6 +31,8 @@ h5
 .h1, .h2, .h3, .h4, .h5, .h6
 	font-family: PTSans-bold
 	font-weight: normal
+	display: block
+	margin: 15px 0 10px
 
 .h1
 	font-size: 20px
@@ -38,7 +41,7 @@ h5
 	font-size: 17px
 
 .h3
-	font-size: 15px
+	font-size: 14px
 
 .h4
 	font-size: 12px
