--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -33,6 +33,8 @@
     
     -# Stylesheets
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/main.css'}
+    %link{:href => 'http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic', :rel => 'stylesheet', :type =>'text/css'}
+
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.bxslider.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/bootstrap.js'}
