--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -12,24 +12,24 @@
 @import 'dropdown'
 @import 'noJS'
 @import 'font-awesome'
-
+@import 'lib/one_news'
+@import 'lib/miniblogs'
+@import 'lib/date'
 
 body
-	font-family: PTSans
-
+  font-family: PTSans
 
 h1, h2, h3, h4, h5, h6
-	font-family: PTSans-bold
+  font-family: PTSans
+  font-weight: bold
 
 a
-	color: #ed4d30
-	text-decoration: underline
+  color: #ed4d30
+  text-decoration: underline
 a:hover
-	color: #ed7515
-	text-decoration: underline
+  color: #ed7515
+  text-decoration: underline
 
 a:visited
-	color: #c13f27
-	text-decoration: underline
-
-
+  color: #c13f27
+  text-decoration: underline
