--- a/source/stylesheets/lib/_sidebar.css.sass
+++ b/source/stylesheets/lib/_sidebar.css.sass
@@ -126,3 +126,54 @@
 		text-transform: uppercase
 	img
 		margin-bottom: 20px
+.modal
+	a
+		cursor: pointer
+		span.close-modal
+			position: absolute
+			top: 10px
+			right: 10px
+			width: 18px
+			height: 18px
+			background: url(/images/close.png) no-repeat
+	.modal-body
+		padding: 30px 20px
+		.h4
+			color: #ed4d30
+			font-family: 'PTSans-bold'
+			font-size: 15px
+			display: block
+			text-align: left
+			text-transform: uppercase
+			margin-bottom: 25px
+		max-height: 800px
+	width: 830px
+	border-radius: 0
+	-moz-border-radius: 0
+	-webkit-border-radius: 0
+	.left-form
+		float: left
+		label
+			font-family: 'PTSans-bold'
+		.book-service
+			float: right
+			margin-top: -20px
+
+	.right-map
+		float: right
+	input, select, textarea, label
+		width: 200px
+	input, select
+		height: 30px
+	textarea
+		height: 80px
+	input, select, textarea
+		margin-bottom: 15px
+		font-family: 'PTSans'
+		border: none
+		box-shadow: 1px 2px #cccccc,  -1px -1px #cccccc
+		-moz-box-shadow: 1px 2px #cccccc,  -1px -1px #cccccc
+		-webkit-box-shadow: 1px 2px #cccccc,  -1px -1px #cccccc
+		border-radius: 0
+		-moz-border-radius: 0
+		-webkit-border-radius: 0
