service page is almost done

--- a/source/one_news.html.haml
+++ b/source/one_news.html.haml
@@ -1,5 +1,9 @@
 %div.text_content_wrapper
   %div.text_container
+    %div.newsdate.date
+      32 августа, 2015
+    %h1
+      Новое поступление незамерзайки(Н1)
     = partial "text_content"
     %div.tell_friends
       = partial "tell_friends"
