--- a/source/service_page.html.haml
+++ b/source/service_page.html.haml
@@ -1,21 +1,8 @@
 .left-sidebar
 	= partial 'sidebar'
 .right-content
-	%h4 РЕМОНТ
-	%img{:src => 'images/blog/image_4.jpg'}
-	%p
-		Незамерзайками" зовутся незамерзающие жидкости, которые предназначены для мойки
-		ветровых стекол автомобилей при низких температурах воздуха.
-		Тут следует обратить внимание на то, какие возможные пределы указывает изготовитель.
-		Все незамерзающие жидкости разные: на одной этикетке может стоять отметка до минус 15 градусов,
-		на другой - до 25 ниже ноля, а третья гарантирует чистые стекла и в 40 градусов мороза.
-		"Незамерзайками" зовутся незамерзающие жидкости, которые предназначены для мойки ветровых стекол автомобилей при низких температурах воздуха.
-		Тут следует обратить внимание на то, какие возможные пределы указывает изготовитель.
-		Все незамерзающие жидкости разные: на одной этикетке может стоять отметка до минус 15 градусов,
-		на другой - до 25 ниже ноля, а третья гарантирует чистые стекла и в 40 градусов мороза.
-		Хотя полностью доверять указанным цифрам не стоит, лучше подстрахуйтесь.
-		У меня, например, было и такое, что незамерзайка, которая обещала выдержать 25 градусов мороза, подкачала уже в 16-18.
-	%h2
-		В состав незамерзаек входят
-	%ul.red-list-elements
-
+	.text_content_wrapper
+		.text_container
+			%h1
+				Ремонт
+			= partial 'text_content'
