--- a/source/stylesheets/lib/_stations.css.sass
+++ b/source/stylesheets/lib/_stations.css.sass
@@ -1,4 +1,5 @@
 .station
+	margin-top: 20px
 	.left-column
 		display: inline-block
 		vertical-align: top
@@ -11,6 +12,12 @@
 		.more
 			margin: 10px 0 20px
 
+		.director_face
+			.text
+				background-color: #f7f8f8
+				padding: 0 10px 10px
+				line-height: 22px
+
 
 	.right-column
 		display: inline-block
@@ -21,7 +28,7 @@
 		.map
 			height: 368px
 			width: 802px
-			margin-bottom: 15px
+			margin-bottom: 25px
 
 		.gallery
 			.h1
@@ -32,12 +39,15 @@
 				vertical-align: top
 				width: 308px
 				height: 220px
-				margin-top: 10px
+				margin-top: 8px
 			.right
 				display: inline-block
 				margin-left: 25px
 				vertical-align: top
 				width: 460px
+
+				.h3
+					margin: 10px 0 5px
 
 
 
