--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -44,12 +44,15 @@ h5
 
 .h3
 	font-size: 14px
+	margin: 10px 0 5px
 
 .h4
 	font-size: 12px
+	margin: 10px 0 5px
 
 .h5
 	font-size: 11px
+	margin: 10px 0 5px
 
 .upper
 	text-transform: uppercase
