fix one news headers and date. Add news page and paginator

--- a/source/stylesheets/lib/_date.css.sass
+++ b/source/stylesheets/lib/_date.css.sass
@@ -1,6 +1,12 @@
 .date
 	color: #fff
-	font-size: 14px
+	// For normal display in main page
+	display: table
+	font:
+		family: PTSans-bold
+		weight: normal
+		style: normal
+		size: 14px
 	margin-top: -15px
 	margin-left: 15px
 	margin-bottom: 5px
