--- a/source/stylesheets/lib/one_news.css.sass
+++ b/source/stylesheets/lib/one_news.css.sass
@@ -22,23 +22,20 @@ $color_white: #fff
     padding: 0 280px 0 0
     position: relative
     h1
-      font-size: 20pt
       display: inline
       text-transform: uppercase
     h2
       color: $color_grey
-      font-size: 18pt
       text-transform: uppercase
     h3
       color: $color_grey
       text-transform: uppercase
-      font-size: 16pt 
+
     .newsdate
       margin: 0px 10px 0px 0
-      padding: 5px 15px
       display: inline-block
       position: relative
-      top: -5px
+      top: -2px
     .newscontent
       padding-top: 30px
       line-height: 25px
@@ -118,7 +115,7 @@ $color_white: #fff
 
 .right_column
   position: absolute
-  top: 70px
+  top: 0
   right: 0
   > div
     margin-bottom: 20px
