--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -6,6 +6,7 @@
 @import 'lib/date'
 @import 'lib/button'
 @import 'lib/custom-select'
+@import 'lib/paginator'
 @import 'lib/blog'
 @import 'lib/stations'
 @import 'lib/container'
@@ -18,6 +19,7 @@
 @import 'lib/sidebar'
 @import 'lib/service_page'
 @import 'lib/one_news'
+@import 'lib/news'
 
 body
 	font-family: PTSans
@@ -26,8 +28,16 @@ h1, h2, h3, h4, h5, h6
 	font-family: PTSans-bold
 	font-weight: normal
 
+h1
+	font-size: 20px
+h2
+	font-size: 18px
+h3
+	font-size: 16px
+h4
+	font-size: 14px
 h5
-	font-size: 15px
+	font-size: 12px
 
 .h1, .h2, .h3, .h4, .h5, .h6
 	font-family: PTSans-bold
