--- a/source/_blogs.html.haml
+++ b/source/_blogs.html.haml
@@ -3,7 +3,7 @@
 		%a{:href => '#'} Все записи
 		&nbsp;
 		%i.icon-angle-right
-	%h4
+	%span.h1
 		БЛОГИ
 
 
@@ -13,7 +13,7 @@
 				%img{:src => 'images/blog/image_1.jpg'}
 			.date
 				31 июля 2013
-			%a{:href => '#'}
+			%a.header-link{:href => '#'}
 				встречайте
 				%br
 				наш новый сайт
@@ -23,7 +23,7 @@
 				%img{:src => 'images/blog/image_2.jpg'}
 			.date
 				26 мая 2013
-			%a{:href => '#'}
+			%a.header-link{:href => '#'}
 				открыт premium филиал в&nbsp;караганде
 
 		.blog-elem
@@ -31,7 +31,7 @@
 				%img{:src => 'images/blog/image_3.jpg'}
 			.date
 				19 марта 2013
-			%a{:href => '#'}
+			%a.header-link{:href => '#'}
 				шиномонтаж за 20 минут
 
 		.blog-elem
@@ -39,6 +39,6 @@
 				%img{:src => 'images/blog/image_4.jpg'}
 			.date
 				1 февраля 2013
-			%a{:href => '#'}
+			%a.header-link{:href => '#'}
 				новое поступление незамерзайки
 
