--- a/source/stylesheets/lib/_blog.css.sass
+++ b/source/stylesheets/lib/_blog.css.sass
@@ -1,7 +1,7 @@
 .blog-list-container
 	width: 1080px
 	margin: 20px auto
-	h4
+	.h1
 		margin-left: 20px
 	.all-records
 		float: right
@@ -28,7 +28,7 @@
 				height: 145px
 				width: 240px
 
-			a
+			a.header-link
 				display: block
 				font-family: ptsans-bold
 				font-size: 15px
