--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -1,17 +1,18 @@
 .main-gallery
-	background-color: #f27d32
 	box-sizing: content-box
 	color: #fff
 	height: 367px
-	margin: 0 auto
+	margin: 20px auto 0
 	width: 1080px
 
 	.slider-navigation
+		background-color: #f27d32
 		display: inline-block
 		height: 367px
 		position: relative
 		vertical-align: top
-		width: 255px
+		width: 260px
+		margin-right: -5px
 
 		.title
 			-moz-box-sizing: content-box
@@ -163,7 +164,7 @@
 					border-radius: 12px
 					bottom: 20px
 					display: table
-					right: 5px
+					right: 17px
 					position: absolute
 					-o-transform: skewX(-12deg)
 					-moz-transform: skewX(-12deg)
