--- a/source/stylesheets/lib/_custom-select.css.sass
+++ b/source/stylesheets/lib/_custom-select.css.sass
@@ -1,6 +1,7 @@
 .customSelect
 	background-color: #fff
 	border: none
+	border: 1px solid #f5f5f5
 	border-bottom: 2px solid #c6c6c6
 	border-radius: 0
 	outline: none
