service page done

--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -16,14 +16,14 @@
         %form#book-form
           %label
             Город
-          %select#town
+          %select#town.customSelect
             %option.active
               Новосибирск
             %option
               Москва
           %label
             Адрес автосервиса
-          %select#address
+          %select#address.customSelect
             %option
               ул. Мира, 67
             %option
