--- a/source/stylesheets/lib/one_news.css.sass
+++ b/source/stylesheets/lib/one_news.css.sass
@@ -8,124 +8,132 @@ $color_white: #fff
 @import 'miniblogs'
 
 @mixin list_numbers($n)
-  @for $i from 1 through $n
-    &:nth-child(#{$i})
-      &:before
-        content: "#{$i}"
+	@for $i from 1 through $n
+		&:nth-child(#{$i})
+			&:before
+				content: "#{$i}"
 
 .text_content_wrapper
-  width: 1080px
-  margin: 30px auto 0
-  position: relative
-  .text_container
-    color: $color_black
-    padding: 0 280px 0 0
-    position: relative
-    h1
-      display: inline
-      text-transform: uppercase
-    h2
-      color: $color_grey
-      text-transform: uppercase
-    h3
-      color: $color_grey
-      text-transform: uppercase
+	width: 1080px
+	margin: 0 auto
+	position: relative
+	.text_container
+		color: $color_black
+		position: relative
+		width: 800px
+		margin-right: -5px
+		display: inline-block
+		vertical-align: top
+		.spacer
+			padding-top: 20px
+		h1
+			display: inline
+			text-transform: uppercase
+		h2
+			color: $color_grey
+			text-transform: uppercase
+		h3
+			color: $color_grey
+			text-transform: uppercase
 
-    .newsdate
-      margin: 0px 10px 0px 0
-      display: inline-block
-      position: relative
-      top: -2px
-    .newscontent
-      padding-top: 30px
-      line-height: 25px
-      table
-        width: 100%
-        text-align: center
-        line-height: 35px
-        margin: 20px 0 30px
-        th
-          background-color: $color_orange
-          color: $color_white
-        tr:nth-child(even)
-          background-color: $color_light_grey
-      .numberlist
-        position: relative
-        list-style: none
-        > li
-          position: relative
-          z-index: 1
-          &:before
-            content: " "
-            width: 13px
-            height: 13px
-            padding-left: 4px
-            font-size: 10px
-            line-height: 13px
-            border-radius: 10px
-            background-color: $color_red_orange
-            color: $color_white
-            position: absolute
-            left: -22px
-            top: 3px
-            z-index: 0
-            box-sizing: border-box
-            -moz-box-sizing: border-box
-          @include list_numbers(20)
-      .orangelist
-        color: $color_red_orange
-        p
-          color: $color_black
-      .greylist
-        list-style: disc
-        color: $color_grey
-        p
-          color: $color_black
-      a.popup
-        text-decoration: none
-        border-bottom: 1px dashed $color_orange
-      .newsimage
-        margin: 0 40px 10px 0
-        border-bottom: 1px solid $color_orange
+		.newsdate
+			margin: 0px 10px 0px 0
+			display: inline-block
+			position: relative
+			top: -2px
+		.newscontent
+			padding-top: 30px
+			line-height: 25px
+			table
+				width: 100%
+				text-align: center
+				line-height: 35px
+				margin: 20px 0 30px
+				th
+					background-color: $color_orange
+					color: $color_white
+				tr:nth-child(even)
+					background-color: $color_light_grey
+			.numberlist
+				position: relative
+				list-style: none
+				> li
+					position: relative
+					z-index: 1
+					&:before
+						content: " "
+						width: 13px
+						height: 13px
+						padding-left: 4px
+						font-size: 10px
+						line-height: 13px
+						border-radius: 10px
+						background-color: $color_red_orange
+						color: $color_white
+						position: absolute
+						left: -22px
+						top: 3px
+						z-index: 0
+						box-sizing: border-box
+						-moz-box-sizing: border-box
+					@include list_numbers(20)
+			.orangelist
+				color: $color_red_orange
+				p
+					color: $color_black
+			.greylist
+				list-style: disc
+				color: $color_grey
+				p
+					color: $color_black
+			a.popup
+				text-decoration: none
+				border-bottom: 1px dashed $color_orange
+			.newsimage
+				margin: 0 40px 10px 0
+				border-bottom: 1px solid $color_orange
 
 .floating
-  &.left
-    float: left
+	&.left
+		float: left
 
 .uppercase
-  text-transform: uppercase
+	text-transform: uppercase
 
 .bold
-  font-weight: bold
+	font-weight: bold
 
 .tell_friends
-  padding: 11px 17px 17px 17px
-  margin: 0px 0 10px
-  border-bottom: 1px solid $color_orange
-  background-color: $color_light_grey
-  text-align: left
-  #vk_like, #fb-root, #twitter_twit
-    position: relative
-    top: 5px
-    width: 20%
-  *
-    display: inline
-  script
-    display: none !important
+	padding: 11px 17px 17px 17px
+	margin: 0px 0 10px
+	border-bottom: 1px solid $color_orange
+	background-color: $color_light_grey
+	text-align: left
+	#vk_like, #fb-root, #twitter_twit
+		position: relative
+		top: 5px
+		width: 20%
+	*
+		display: inline
+	script
+		display: none !important
 
 .right_column
-  position: absolute
-  top: 0
-  right: 0
-  > div
-    margin-bottom: 20px
+
+	display: inline-block
+	vertical-align: top
+	width: 242px
+	.miniblogs_wrapper
+		margin-top: 30px
+	div
+		margin-bottom: 20px
 
 .blogs_wrapper
-  .jcarousel-skin-tango
-    .jcarousel-container-horizontal
-      padding: 20px 5px
-    .jcarousel-clip-horizontal
-      height: 215px
-    .jcarousel-prev-horizontal, .jcarousel-next-horizontal
-      top: 80px
-      
+	.jcarousel-skin-tango
+		.jcarousel-container-horizontal
+			padding: 20px 5px
+		.jcarousel-clip-horizontal
+			height: 215px
+		.jcarousel-prev-horizontal, .jcarousel-next-horizontal
+			top: 80px
+
