partial for form

--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -13,7 +13,7 @@
       %span.h4
         Записаться на обслуживание
       .left-form
-        %form#book-form
+        %form#book-form.form
           %label
             Город
           %select#town.customSelect
