--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -2,7 +2,7 @@
 	box-sizing: content-box
 	color: #fff
 	height: 367px
-	margin: 20px auto 0
+	margin: auto 0
 	width: 1080px
 
 	.slider-navigation
