--- a/source/stylesheets/lib/_dropdown.css.sass
+++ b/source/stylesheets/lib/_dropdown.css.sass
@@ -43,18 +43,20 @@
 	cursor: pointer
 	outline: none
 
-	
+.menu-element .dropdown-menu
+	left: 23px
+
 
 .menu-element .dropdown
 	z-index: 10
 	opacity: 0
-	width: 220px
+	width: 230px
 	pointer-events: none
 	border-bottom: 1px solid #d1d2d4
 	border-top: 1px solid #d1d2d4
 	border-right: 1px solid #d1d2d4
 	border-left: 2px solid #ed4d30
-	padding: 8px 8px 8px 0px
+	padding: 25px 0 25px 15px
 	list-style: none
 	border-radius: 0
 	li:hover
@@ -67,7 +69,7 @@
 	z-index: 10
 	position: absolute
 	top: 100%
-	width: 220px
+	width: 200px
 	right: 0px
 	left: 0px
 	background: white
@@ -135,8 +137,8 @@ ul.dropdown.second-column
 	top: -1px
 	left: 100%
 	height: 101.5%
-	padding: 10px 8px 10px 0
 	margin-left: 0
+	padding: 25px 0 25px 0
 	border-left-width: 0
 	-webkit-border-left-widht: 0
 	-moz-border-left-widht: 0
@@ -156,13 +158,13 @@ div.menu-element ul.dropdown-menu.no-border
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../../img/headerMenuDot.png') no-repeat
+	background: url('../img/headerMenuDot.png') no-repeat
 
 .menu-element > .dropdown  a:hover .lIm
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../../img/headerMenuRight.png') no-repeat
+	background: url('../img/headerMenuRight.png') no-repeat
 
 
 div.wrapper-dropdown-top ul.dropdown-menu
@@ -179,13 +181,13 @@ div.wrapper-dropdown-top ul.dropdown-menu.no-border
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../../img/headerMenuDot.png') no-repeat
+	background: url('../img/headerMenuDot.png') no-repeat
 
 .wrapper-dropdown-top > .dropdown  a:hover .lIm
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../../img/headerMenuRight.png') no-repeat
+	background: url('../img/headerMenuRight.png') no-repeat
 
 /* Active state */
 
