--- a/source/stylesheets/lib/_skin.css.sass
+++ b/source/stylesheets/lib/_skin.css.sass
@@ -62,13 +62,13 @@
 	width: 32px
 	height: 32px
 	cursor: pointer
-	background: transparent url('../../img/courRight.png') no-repeat 0 0
+	background: transparent url('../img/courRight.png') no-repeat 0 0
 	
 
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-next-horizontal 
 	left: 5px
 	right: auto
-	background-image: url('../../img/courRight.png')
+	background-image: url('../img/courRight.png')
 	
 
 .jcarousel-skin-tango .jcarousel-prev-horizontal 
@@ -78,12 +78,12 @@
 	width: 32px
 	height: 32px
 	cursor: pointer
-	background: transparent url('../../img/courLeft.png') no-repeat 0 0
+	background: transparent url('../img/courLeft.png') no-repeat 0 0
 	
 
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-prev-horizontal 
 	left: auto
 	right: 5px
-	background-image: url('../../img/courRight.png')
+	background-image: url('../img/courRight.png')
 	
 
