add form class in second layout

--- a/source/_franshiza.html.haml
+++ b/source/_franshiza.html.haml
@@ -7,7 +7,7 @@
 	.elem3
 		%span.h3.small
 			ЗАЯВКА НА ФРАНШИЗУ
-		%form.form-horizontal
+		%form.form.form-horizontal
 			%label{:for => 'user_city'}
 				Ваш город
 			%input{:type => 'text', :id => 'user_city', :value => 'Новосибирск'}
