--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -1,5 +1,6 @@
 @import "lib/bootstrap"
 @import "lib/fonts"
+@import "lib/form"
 @import "lib/font-awesome"
 @import 'lib/header_min'
 @import 'lib/footer_min'
