--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -133,7 +133,7 @@
         %span.liName
           Ремонт автоэлектрики
 .special-offer
-  %h4
+  %span.h2
     Горячие акции
   %img{:src => 'img/special_offer_2.png'}
   %img{:src => 'img/special_offer_1.png'}
