--- a/source/stylesheets/lib/_sidebar.css.sass
+++ b/source/stylesheets/lib/_sidebar.css.sass
@@ -121,9 +121,10 @@
 	background-color: #ffffff
 	width: 100%
 	margin-bottom: 30px
-	h4
+	span.h2
 		margin-left: 10px
 		text-transform: uppercase
+		margin: 20px 0px 10px
 	img
 		margin-bottom: 20px
 .modal
