--- a/source/stylesheets/lib/_footer.css.sass
+++ b/source/stylesheets/lib/_footer.css.sass
@@ -53,6 +53,9 @@
 	padding-bottom: 3px
 	border: none
 	background: url('../img/footerMiniMap.png')
+	float: left
+	a
+		float: left
 	
 
 #footer .bottomContacts  .footerMagna 
