some bugs are fixed in layout

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -22,7 +22,7 @@
 	.footerData.whiteFont
 		.footerMenuElement
 			.footerMenuElementMiddle
-				%h3
+				%span.h3
 					Наши услуги
 				%ul.footerUl
 					%li
@@ -35,6 +35,11 @@
 							%span.lIm
 							%span.liName
 								Диагностика
+					%li
+						%a{:href=>"#"}
+							%span.lIm
+							%span.liName
+								Плановое ТО
 					%li
 						%a{:href=>"#"}
 							%span.lIm
@@ -52,7 +57,7 @@
 								Мойка
 		.footerMenuElement
 			.footerMenuElementMiddle
-				%h3
+				%span.h3
 					Наш сервис
 				%ul.footerUl
 					%li
@@ -72,7 +77,7 @@
 								Дисконтная программа
 		.footerMenuElement
 			.footerMenuElementMiddle
-				%h3
+				%span.h3
 					О нас
 				%ul.footerUl
 					%li
@@ -102,7 +107,7 @@
 								Франшиза
 		.footerMenuElement
 			.footerMenuElementMiddle
-				%h3
+				%span.h3
 					Мы в социальных сетях
 				%ul.footerUl
 					%li
