--- a/source/stylesheets/lib/_footer.css.sass
+++ b/source/stylesheets/lib/_footer.css.sass
@@ -86,12 +86,13 @@
 	float: left
 	width: 240px
 	height: 300px
+	margin-right: 30px
 	
 #footer .footerData .footerMenuElement .footerUl 
 	list-style: none
 	li a
 		line-height: 10px
-		font-size: 12px
+		font-size: 13px
 	
 
 #footer .footerData .footerMenuElement .footerUl li .lIm 
@@ -155,9 +156,9 @@
 
 
 #footer .footerMenuElement .footerMenuElementMiddle
-	h3
-		font-family: "PTSans"
-		font-size: 12px
+	.h3
+		font-family: "PTSans-bold"
+		font-size: 13px
 		text-transform: uppercase
 		margin: 0 0 0 25px
 	a
