--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -188,6 +188,12 @@
 .menu-element
 	float: left
 	position: relative
+	margin-right: 16px
+
+.menu-element.open
+	float: left
+	position: relative
+	margin-right: 0
 
 #header .mainMenu .topElement
 	text-transform: uppercase
@@ -198,11 +204,20 @@
 #header .mainMenu .menu-element.open .element .topElement
 	border-top: 2px solid #f17522
 	border-bottom: 2px solid #f17522
-	padding: 10px 15px 10px 30px
+	padding: 9px 15px 9px 36px
 	border-radius: 15px
-	margin-left: -30px
-
-
+	margin-left: -33px
+	position: relative
+	box-shadow: 0 -1px #f8b890, 0 1px #f8b890
+	z-index: 1
+	span.round-end
+		width: 20px
+		height: 45px
+		background: url('../images/headerMenuRoundEndCopy.png') no-repeat
+		position: absolute
+		top: -5px
+		right: -5px
+		z-index: 2
 
 #header .mainMenu .menu-element.open .element .topElement .topElement-inner
 	margin-left: -43px
@@ -211,9 +226,12 @@
 	border: 2px solid #ffffff
 	border-left: none
 	border-radius: 20px
-	padding: 8px 5px 8px 41px
+	padding: 7px 15px 7px 40px
 	position: relative
-	z-index: 2
+	z-index: 3
+
+#header .mainMenu .topElement .topElement-inner
+	padding-right: 10px
 
 /* topElementMenuRepair topElementMenuDiag topElementMenuTO topElementMenuInstall topElementMenuShin topElementMenuService*/
 .topElementMenuRepair, .topElementMenuDiag, .topElementMenuTO, .topElementMenuInstall, .topElementMenuShin, .topElementMenuService
