full success history page

--- a/source/presentations.html.haml
+++ b/source/presentations.html.haml
@@ -1,39 +1,64 @@
 .presentation-box
-  .title
-    Презентации
-  .ssh-row-0
+  .title-row
+    .title
+      ПРЕЗЕНТАЦИИ
+    %a
+      КУПИТЬ ФРАНШИЗУ
+      .arrow
+        >
+    .flatten
+  .ssh-row
     .ssh-box-left
-      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0", :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no", :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0", :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px", :webkitallowfullscreen => "", :width => "520"}
+      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0",
+              :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no",
+              :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0",
+              :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px",
+              :webkitallowfullscreen => "", :width => "520"}
       .ssh-tips
         .ssh-name
-          брэнд концепция
+          БРЭНД КОНЦЕПЦИЯ
         .ssh-body
           Учитывая современные тенденции.
           А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
           полагаясь на инсайдерскую информацию.
     .ssh-box-right
-      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0", :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no", :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0", :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px", :webkitallowfullscreen => "", :width => "520"}
+      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0",
+              :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no",
+              :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0",
+              :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px",
+              :webkitallowfullscreen => "", :width => "520"}
       .ssh-tips
         .ssh-name
-          фирменный стиль
+          ФИРМЕННЫЙ СТИЛЬ
         .ssh-body
           Служба маркетинга компании без оглядки. Учитывая современные тенденции.
           А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер.
-  .ssh-row-1
+    .flatten
+  .ssh-row
     .ssh-box-left
-      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0", :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no", :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0", :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px", :webkitallowfullscreen => "", :width => "520"}
+      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0",
+              :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no",
+              :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0",
+              :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px",
+              :webkitallowfullscreen => "", :width => "520"}
       .ssh-tips
         .ssh-name
-          свой автосервис за месяц
+          СВОЙ АВТОСЕРВИС ЗА МЕСЯЦ
         .ssh-body
           Учитывая современные тенденции.
           А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
           полагаясь на инсайдерскую информацию.
     .ssh-box-right
-      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0", :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no", :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0", :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px", :webkitallowfullscreen => "", :width => "520"}
+      %iframe{:allowfullscreen => "", :frameborder => "0", :height => "420", :marginheight => "0",
+              :marginwidth => "0", :mozallowfullscreen => "", :scrolling => "no",
+              :src => "http://www.slideshare.net/slideshow/embed_code/25455663?rel=0",
+              :style => "border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px",
+              :webkitallowfullscreen => "", :width => "520"}
       .ssh-tips
         .ssh-name
-          высокий уровень обслуживания - залог успеха
+          ВЫСОКИЙ УРОВЕНЬ ОБСЛУЖИВАНИЯ - ЗАЛОГ УСПЕХА
         .ssh-body
           Служба маркетинга компании без оглядки. Учитывая современные тенденции.
           А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер.
+    .flatten
+=partial 'paginator'
