--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -14,6 +14,8 @@
 @import 'lib/skin'
 @import 'lib/dropdown'
 @import 'lib/noJS'
+@import 'lib/presentations'
+@import 'lib/_successHistory.css.sass'
 
 body
 	font-family: PTSans
