--- a/source/success_history.html.haml
+++ b/source/success_history.html.haml
@@ -1,2 +1,80 @@
-%span.h1
-	ИСТРОРИИ УСПЕХА
+.success-history-box
+  .title-row
+    .title
+      ИСТОРИИ УСПЕХА
+    %a
+      КУПИТЬ ФРАНШИЗУ
+      .arrow
+        >
+    .flatten
+  .success-row
+    .success-box.sb-left
+      .pic-box
+        %img{:src => 'images/story-pic-1.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/premium-type.png'}
+        .tips-address
+          НОВОСИБИРСК, МИРА 91
+        .tips-body
+          Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+          Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
+    .success-box.sb-mid
+      .pic-box
+        %img{:src => 'images/story-pic-2.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/standard-type.png'}
+        .tips-address
+          НОВОСИБИРСК, ТЮМЕНСКАЯ 32
+        .tips-body
+          Уучитывая современные тенденции. А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
+          полагаясь на инсайдерскую информацию. Служба маркетинга компании без оглядки.
+    .success-box.sb-right
+      .pic-box
+        %img{:src => 'images/story-pic-3.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/express-type.png'}
+        .tips-address
+          ТОМСК, ИЛЬИЧА 2
+        .tips-body
+          Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
+          А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер.
+    .flatten
+  .success-row
+    .success-box.sb-left
+      .pic-box
+        %img{:src => 'images/story-pic-4.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/standard-type.png'}
+        .tips-address
+          НОВОСИБИРСК, МИРА 91
+        .tips-body
+          Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+          Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
+    .success-box.sb-mid
+      .pic-box
+        %img{:src => 'images/story-pic-1.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/express-type.png'}
+        .tips-address
+          НОВОСИБИРСК, ТЮМЕНСКАЯ 32
+        .tips-body
+          Уучитывая современные тенденции. А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
+          полагаясь на инсайдерскую информацию. Служба маркетинга компании без оглядки.
+    .success-box.sb-right
+      .pic-box
+        %img{:src => 'images/story-pic-2.png'}
+      .tips
+        .tips-type
+          %img{:src => 'images/premium-type.png'}
+        .tips-address
+          ТОМСК, ИЛЬИЧА 2
+        .tips-body
+          Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+          Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
+    .flatten
+=partial 'paginator'
