--- a/source/layouts/layout_min.haml
+++ b/source/layouts/layout_min.haml
@@ -42,6 +42,7 @@
     %script{:type => 'text/javascript', :src => 'javascripts/ready.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/modernizr.custom.79639.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.jcarousel.min.js'}
+    %script{:type => 'text/javascript', :src => 'javascripts/jquery.maskedinput.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/application.js'}
   %body{class: current_page.data.body_class || 'page'}
     #container
