--- a/source/stylesheets/lib/_form.css.sass
+++ b/source/stylesheets/lib/_form.css.sass
@@ -22,3 +22,12 @@
 	.book-service
 		float: right
 		margin-top: -20px
+
+.form-horizontal
+	label
+		display: inline-block
+		width: 100px
+		padding-left: 3px
+		margin-right: -5px
+		line-height: 30px
+		vertical-align: top
