--- a/source/_franshiza.html.haml
+++ b/source/_franshiza.html.haml
@@ -1,28 +1,30 @@
 .franshiza_container
 	.elem3
 		%img{:src => 'images/manager.jpg'}
-		%span.h3.small
+		%span.h3.normal
 			Менеджер по продаже франшизы
 		Иванов Иван Иванович
-	.elem3
+	.elem3.logn-margin
 		%span.h3.small
 			ЗАЯВКА НА ФРАНШИЗУ
 		%form.form.form-horizontal
 			%label{:for => 'user_city'}
 				Ваш город
-			%input{:type => 'text', :id => 'user_city', :value => 'Новосибирск'}
+			%input{:type => 'text', :id => 'user_city',:required => 'true', :value => 'Новосибирск'}
 
 			%label{:for => 'user_fio'}
 				Ф.И.О.
-			%input{:type => 'text', :id => 'user_fio', :value => ''}
+			%input{:type => 'text', :id => 'user_fio', :required => 'true', :value => ''}
 
 			%label{:for => 'user_phone'}
 				Ваш телефон
-			%input{:type => 'text', :id => 'user_phone', :value => 'Новосибирск'}
-
-			%button.orange
-				ОТПРАВИТЬ ЗАЯВКУ
-				%i.icon-angle-right
+			%input{:type => 'tel', :id => 'user_phone', :placeholder => '+7 ( _ _ _ ) _ _ _-_ _-_ _',
+			 	:required => 'true',
+				:pattern => '\+7 \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}'}
+			.align-right
+				%button.orange{:type => 'submit'}
+					ОТПРАВИТЬ ЗАЯВКУ
+					%i.icon-angle-right
 
 	.elem3
 		%span.h3.small
@@ -33,3 +35,8 @@
 			2
 		.number
 			7
+
+:javascript
+	$(document).ready (function(){
+	$("#user_phone").mask("+7 (999) 999-99-99");
+	})
