--- a/source/stylesheets/lib/_franshiza.css.sass
+++ b/source/stylesheets/lib/_franshiza.css.sass
@@ -1,14 +1,31 @@
 .franshiza_container
 	background-color: #f7f8f8
+	padding: 30px 16px 20px
 	.elem3
 		display: inline-block
-		width: 336px
-		padding: 30px 16px
-		margin-right: -5px
+		width: 310px
+		padding: 0
+		margin-right: 50px
 		vertical-align: top
 
 		.h3.small
 			margin: 0 0 25px
+
+		.normal
+			margin: 20px 0 5px
+
+		.form
+			width: 310px
+			margin: 0
+
+			input[type='text'],
+			input[type='tel']
+				width: 210px
+
+			.align-right
+				text-align: right
+				margin-top: -20px
+				padding-right: 7px
 
 
 		.number
@@ -29,3 +46,9 @@
 
 		.number:last-child
 			margin-right: -5px
+
+	.elem3:last-child
+		margin-right: -5px
+
+	.logn-margin
+		margin-right: 65px
