--- a/source/stylesheets/lib/_paginator.css.sass
+++ b/source/stylesheets/lib/_paginator.css.sass
@@ -5,9 +5,11 @@
 		weight: normal
 		style: normal
 		size: 20px
-	margin: 20px 0 40px
+	margin: 30px 0 40px
 	text-align: center
 	vertical-align: top
+	.current
+		margin: 0 5px
 	a
 		border-bottom: 2px solid #f7b1a4
 		color: #ed4d30
@@ -18,7 +20,7 @@
 			style: normal
 			size: 15px
 		line-height: 15px
-		margin: 0 5px
+		margin: 1px 5px 0
 		text-decoration: none
 		vertical-align: top
 	a.prev, a.next
