change global margin of span .h1-5

--- a/source/news.html.haml
+++ b/source/news.html.haml
@@ -1,6 +1,6 @@
 %div.text_content_wrapper
 	%div.text_container
-		%span.h1
+		%span.h1.left-15
 			БЛОГИ
 		.news-elem
 			%a.img{:href => '#'}
@@ -61,6 +61,38 @@
 					Тут следует обратить внимание на то, какие возможные пределы указывает изготовитель.
 					Все незамерзающие жидкости разные: на одной этикетке может стоять отметка до минус 15 градусов,
 					на другой - до 25 ниже ноля.
+
+		.news-elem
+			%a.img{:href => '#'}
+				%img.newsimage{:src => "images/blog/image_2.jpg"}
+			.right-text
+				%div.date
+					32 августа, 2013
+				%div
+					%a.header-link
+						Открыт Premium филиал в Новосибирске
+				%p
+					Недалеко от ТРЦ "МЕГА" открылась новая станция FIT SERVICE.
+					%br
+					Станция находится по адресу Тюменская, 91.
+					%br
+					Телефон все тот же: 363-59-55, звоните с 9 до 21.
+
+		.news-elem
+			%a.img{:href => '#'}
+				%img.newsimage{:src => "images/blog/image_3.jpg"}
+
+			.right-text
+				%div.date
+					32 августа, 2013
+				%div
+					%a.header-link
+						Шиномонтаж за 20 минут
+				%p
+					Шиномонтаж — это операция по снятию шины с диска или установке ее на диск.
+					Шиномонтаж делается для выявления и ремонта механических повреждений шины (боковых порезов, проколов),
+					либо для сезонной смены шин.
+
 
 		= partial 'paginator'
 
