--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -40,11 +40,11 @@ h4
 h5
 	font-size: 12px
 
-.h1, .h2, .h3, .h4, .h5, .h6
+.h1, .h2, .h3, .h4, .h5
 	font-family: PTSans-bold
 	font-weight: normal
 	display: block
-	margin: 30px 0 20px
+	margin: 0 0 20px
 
 .h1
 	font-size: 20px
@@ -52,17 +52,36 @@ h5
 .h2
 	font-size: 18px
 
+.h3, .h4, .h5
+	margin-bottom: 5px
+
 .h3
 	font-size: 16px
-	margin: 10px 0 5px
+
+.h3.small
+	font-size: 15px
 
 .h4
 	font-size: 14px
-	margin: 10px 0 5px
 
 .h5
 	font-size: 12px
-	margin: 10px 0 5px
+
+.h1.with-top-margin,
+.h2.with-top-margin
+	margin-top: 30px
+
+.h3.with-top-margin,
+.h4.with-top-margin,
+.h5.with-top-margin
+	margin-top: 10px
+
+.h1.left-15,
+.h2.left-15,
+.h3.left-15,
+.h4.left-15,
+.h5.left-15
+	margin-left: 15px
 
 .upper
 	text-transform: uppercase
