--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -35,11 +35,11 @@ h4
 h5
 	font-size: 12px
 
-.h1, .h2, .h3, .h4, .h5, .h6
+.h1, .h2, .h3, .h4, .h5
 	font-family: PTSans-bold
 	font-weight: normal
 	display: block
-	margin: 30px 0 20px
+	margin: 0 0 20px
 
 .h1
 	font-size: 20px
@@ -47,23 +47,29 @@ h5
 .h2
 	font-size: 18px
 
+.h3, .h4, .h5
+	margin-bottom: 5px
+
 .h3
 	font-size: 16px
-	margin: 10px 0 5px
 
 .h3.small
 	font-size: 15px
-	margin: 10px 0 5px
-
-
 
 .h4
 	font-size: 14px
-	margin: 10px 0 5px
 
 .h5
 	font-size: 12px
-	margin: 10px 0 5px
+
+.h1.with-top-margin,
+.h2.with-top-margin
+	margin-top: 30px
+
+.h3.with-top-margin,
+.h4.with-top-margin,
+.h5.with-top-margin
+	margin-top: 10px
 
 .upper
 	text-transform: uppercase
