bugs in layout are fixed

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -135,6 +135,11 @@
 			%a{:href=>"#", :class=>"whiteFont"}
 				Карта сайта
 		.footerTel
+			.info-block
+				%span.code
+					(338)
+				%span.phone
+					380-65-65
 	.bottomContacts
 		.copyDiv
 			%p.copy
