--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -82,7 +82,7 @@
 				%span.work-time
 					с 9:00 до 21:00 без выходных
 	.mainMenu
-		.menu-element.open
+		.menu-element
 			.dd.wrapper-dropdown-2.element.dropdown-toggle{:tabindex=>"1", 'data-toggle' => 'dropdown'}
 				%span.topElementMenuRepair
 				%span.topElement
