--- a/source/stylesheets/lib/_footer.css.sass
+++ b/source/stylesheets/lib/_footer.css.sass
@@ -90,7 +90,8 @@
 	width: 240px
 	height: 300px
 	margin-right: 30px
-	
+
+
 #footer .footerData .footerMenuElement .footerUl 
 	list-style: none
 	li a
@@ -182,3 +183,9 @@
 			padding-bottom: 3px
 			border: none
 			background: url('../img/headerMenuRight.png') no-repeat
+
+#footer
+	.info-block
+		float: right
+		margin-right: 20px
+		margin-top: 35px
